--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "babel-preset-react-native": "4.0.0",
+    "mocha": "^4.1.0",
     "react-test-renderer": "16.2.0"
   }
 }
