--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "lint": "eslint *.js e2e/*.spec.js"
   },
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.52.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.1.2",
     "babel-polyfill": "^6.26.0",
     "babel-preset-react-native": "4.0.0",
     "detox": "^7.0.0",
