--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "react-native": "0.55.4"
   },
   "devDependencies": {
+    "@jonny/react-native-mock": "^0.4.2",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "4.0.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "23.4.0",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFiles": [
+      "./tests/setup.js"
+    ]
   }
 }
