--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@jonny/react-native-mock": "^0.4.2",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "4.0.0",
+    "detox": "^8.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "23.4.0",
@@ -24,5 +25,16 @@
     "setupFiles": [
       "./tests/setup.js"
     ]
+  },
+  "detox": {
+    "test-runner": "jest",
+    "configurations": {
+      "ios.sim.debug": {
+        "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/LearnTDDInReactNative.app",
+        "build": "xcodebuild -project ios/LearnTDDInReactNative.xcodeproj -scheme LearnTDDInReactNative -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build",
+        "type": "ios.simulator",
+        "name": "iPhone 8"
+      }
+    }
   }
 }
