--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest tests/**/*.spec.js"
+    "test": "jest tests/**/*.spec.js",
+    "lint": "eslint *.js e2e/*.js tests/**/*.js"
   },
   "dependencies": {
     "react": "16.3.1",
@@ -12,11 +13,19 @@
   },
   "devDependencies": {
     "@jonny/react-native-mock": "^0.4.2",
+    "babel-eslint": "^8.2.5",
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "4.0.0",
     "detox": "^8.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-codingitwrong": "^0.1.2",
+    "eslint-plugin-detox": "^1.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jest": "^21.17.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1",
     "jest": "23.4.0",
     "react-test-renderer": "16.3.1"
   },
