--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   },
   "devDependencies": {
     "babel-preset-react-native": "^5",
-    "react-test-renderer": "16.4.1"
+    "chai": "^4.1.2",
+    "detox": "^9.0.1",
+    "mocha": "^5.2.0",
+    "react-test-renderer": "16.4.1",
+    "sinon": "^6.3.3",
+    "sinon-chai": "^3.2.0"
   }
 }
