--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "react-test-renderer": "16.4.1",
     "sinon": "^6.3.3",
     "sinon-chai": "^3.2.0"
+  },
+  "detox": {
+    "test-runner": "mocha"
   }
 }
