--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "react-native": "0.56.1"
   },
   "devDependencies": {
+    "@jonny/react-native-mock": "^0.4.2",
     "babel-preset-react-native": "^5",
     "chai": "^4.1.2",
     "detox": "^9.0.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "mocha": "^5.2.0",
     "react-test-renderer": "16.4.1",
     "sinon": "^6.3.3",
