Add Mocha and friends

--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
+    "chai": "^4.2.0",
     "eslint": "^5.10.0",
     "eslint-config-codingitwrong": "^0.1.4",
     "eslint-plugin-detox": "^1.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "mocha": "^5.2.0",
+    "sinon": "^7.2.2",
+    "sinon-chai": "^3.3.0"
   },
   "private": true
 }
