--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "lint": "eslint *.js",
+    "lint": "eslint *.js test/**/*.js",
+    "test": "mocha",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -13,9 +14,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
   },
   "devDependencies": {
+    "@jonny/react-native-mock": "^0.4.2",
     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "chai": "^4.2.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
     "eslint-config-codingitwrong": "^0.1.4",
     "eslint-plugin-detox": "^1.0.0",
