--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "lint": "eslint *.js test/**/*.js",
+    "lint": "eslint *.js test/**/*.js e2e/*.spec.js",
     "test": "mocha",
     "eject": "expo eject"
   },
@@ -18,6 +18,8 @@
     "babel-eslint": "^10.0.1",
     "babel-preset-expo": "^5.0.0",
     "chai": "^4.2.0",
+    "detox": "^9.1.2",
+    "detox-expo-helpers": "^0.6.0",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.10.0",
@@ -26,9 +28,20 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "expo-detox-hook": "^1.0.10",
     "mocha": "^5.2.0",
     "sinon": "^7.2.2",
     "sinon-chai": "^3.3.0"
   },
-  "private": true
+  "private": true,
+  "detox": {
+    "test-runner": "mocha",
+    "configurations": {
+      "ios.sim": {
+        "binaryPath": "bin/Exponent.app",
+        "type": "ios.simulator",
+        "name": "iPhone 7"
+      }
+    }
+  }
 }
