--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.4.4",
     "@babel/runtime": "^7.4.4",
     "babel-jest": "^24.8.0",
+    "detox": "^12.7.0",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.54.0",
     "react-native-testing-library": "^1.7.0",
@@ -21,5 +22,8 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "detox": {
+    "test-runner": "jest"
   }
 }
